# choose_llm

./: .gitignore  README.md  SETUP-PC.md  SETUP-mac.md  environment.yml  pyproject.toml  requirements.txt  troubleshooting.ipynb
.devcontainer/: devcontainer.json  setup.sh
intro/: joke.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb
llamacpp/: llamacpp.ipynb
outputs/: assistant-output.ipynb  intro_lab2_saved.ipynb  prototype-output.ipynb
project1/: parser.ipynb  parser_extended.ipynb  sample.json
project1 - Airline AI Assistant/: assistant.ipynb
project2/: expert.ipynb  product.md  product.txt
project2 - Expert knowledge worker/: expert.ipynb
project2 - Expert knowledge worker/knowledge-base/contracts/: Contract with Apex Reinsurance for Rellm: AI-Powered Enterprise Reinsurance Solution.md
project2 - Expert knowledge worker/knowledge-base/employees/: Maxine Thompson.md
project3/: curator.ipynb
project3 - Price intelligence/: data.ipynb
project4 - Resume parser/: my_resume.txt  parser.ipynb
project5 - Code generator/: curator.ipynb
project6 - simple RAG example with FAISS/: expert.ipynb
project7 - llamacpp local inference/: llamacpp.ipynb
project8 - connect4/: board.py  board_view.py  c4.py  game.py  llm.py  player.py  prototype.ipynb
setup/: SETUP-new.md
